--- a/css/pages.css
+++ b/css/pages.css
@@ -3,21 +3,22 @@
 .hide{display:none;}
 .has-js .label-check,.has-js .label-radio {}
 .has-js .label-radio{
-	width:28px;height:28px;display:inline-block;cursor:pointer;position: relative;
-	border-radius:20px;border: 3px solid #fff;box-sizing:border-box;margin-right:5px;
+	width:26px;height:26px;display:inline-block;cursor:pointer;position: relative;
+	border-radius:20px;border: 2px solid #fff;box-sizing:border-box;margin-right:5px;
 }
 .has-js label.c-on{ background: url(check-on.png) no-repeat; }
 /*.has-js label.r-on{background-image:url(../images/common/ico-check.png) !important;background-repeat: no-repeat !important;background-position:center center !important;}
 */
 .has-js label.r-on{
 	
-	-webkit-box-shadow: 0px 0px 3px 2px rgba(0,0,0,.4);
-	-moz-box-shadow:    0px 0px 3px 2px rgba(0,0,0,.4);
-	box-shadow:         0px 0px 3px 2px rgba(0,0,0,.4);
+	-webkit-box-shadow: 0px 0px 3px 2px rgba(0,0,0,.6);
+	-moz-box-shadow:    0px 0px 3px 2px rgba(0,0,0,.6);
+	box-shadow:         0px 0px 3px 2px rgba(0,0,0,.6);
 	
 }
 .has-js .label-check input,.has-js .label-radio input { position: absolute; left: -9999px; }
-.label-radio .sel-color-text{bottom:-20px;width:auto;position:absolute;display:inline-block;min-width:3em;text-align:center;left:-50%;right:-50%;font-size:12px;color:#555;font-weight:bold;}
+.label-radio .sel-color-text{bottom:-20px;width:auto;position:absolute;display:inline-block;min-width:3em;text-align:center;left:-50%;right:-50%;font-size:12px;color:#666;font-weight:bold;}
+.label-radio.r-on .sel-color-text{color:#000;font-weight: bold;}
 
 .index-tab .left{float:left;}
 .index-tab .right{float:right;}
@@ -162,8 +163,8 @@
 .one-scart .info .product-name{font-size:16px;color:#333;line-height:26px;font-weight:bold;margin-bottom:8px;}
 .one-scart .info .product-color{font-size:14px;color:#333;vertical-align:middle;margin-bottom:12px;line-height:25px;vertical-align:middle;}
 .one-scart .info .product-color .product-color-hex{
-	width:22px;height:22px;display:inline-block;cursor:pointer;position: relative;
-	border-radius:20px;border: 5px solid #fff;box-sizing:border-box;
+	width:26px;height:26px;display:inline-block;cursor:pointer;position: relative;
+	border-radius:20px;box-sizing:border-box;
 	-webkit-box-shadow: 0px 0px 3px 2px rgba(0,0,0,.4);
 	-moz-box-shadow:    0px 0px 3px 2px rgba(0,0,0,.4);
 	box-shadow:         0px 0px 3px 2px rgba(0,0,0,.4);
@@ -266,6 +267,12 @@
 	font-size:12px Arial;
 	z-index:2;
 }
+
+/*rating*/
+.rt-upper .pic.flex-2{display:block;flex:0 1 170px;width:170px;margin-right:30px;}
+.rt-upper .name.flex-2{display:block;flex:0 1 calc(100% - 200px);width:calc(100% - 200px);}
+.spec-info .product-desc .rt-upper img{margin-top:0;margin-bottom:0;}
+
 
 @media screen and (min-width: 1200px){
 	.tab-con .tab-inner{display:none;max-height:325px;overflow-x: hidden;overflow-y: scroll;}
