--- a/css/base.css
+++ b/css/base.css
@@ -87,6 +87,7 @@ height: 0;
 .color-gray-333{color:#333;}
 .color-gray-666{color:#666;}
 .color-gray-999{color:#999;}
+.color-gray-aaa{color:#aaa;}
 .color-gray-ddd{color:#ddd;}
 .text-del{text-decoration:line-through;}
 
