--- a/css/pages.css
+++ b/css/pages.css
@@ -270,9 +270,36 @@
 }
 
 /*rating*/
-.rt-upper .pic.flex-2{display:block;flex:0 1 170px;width:170px;margin-right:30px;}
-.rt-upper .name.flex-2{display:block;flex:0 1 calc(100% - 200px);width:calc(100% - 200px);}
+.rt-upper .pic.flex-2{display:block;flex:0 1 110px;width:110px;margin-right:30px;}
+.rt-upper .con.flex-2{display:block;flex:0 1 calc(100% - 200px);width:calc(100% - 200px);}
+.rt-upper .con .name{font-size: 18px;color:#333;line-height:30px;font-weight:bold;}
 .spec-info .product-desc .rt-upper img{margin-top:0;margin-bottom:0;}
+.rt-textarea{
+	border: 1px solid #d6d6d6;
+    font-size: 14px;
+    color: #666;
+    font-weight: bold;
+    padding: 0 20px;
+    box-sizing: border-box;
+    height: 46px;
+    line-height: 46px;
+    background: none;
+    outline: none;
+    resize: none;
+	height:138px;
+	width:100%;
+}
+
+.one-rt-common{
+	margin-top:10px;
+	padding:10px 0;
+	border-top:1px solid #eee;
+}
+
+.one-rt-common .name{font-size:15px;font-weight:bold;color:#333;line-height:30px;}
+.one-rt-common .comment{font-size:13px;line-height:20px;color:#666;}
+
+.one-rt-common .reply{background:#f5f5f5;margin:20px 0;padding:20px;}
 
 
 @media screen and (min-width: 1200px){
