--- a/css/pages.css
+++ b/css/pages.css
@@ -299,7 +299,7 @@
 .one-rt-common .name{font-size:15px;font-weight:bold;color:#333;line-height:30px;}
 .one-rt-common .comment{font-size:13px;line-height:20px;color:#666;}
 
-.one-rt-common .reply{background:#f5f5f5;margin:20px 0;padding:20px;}
+.one-rt-common .reply{background:#f5f5f5;margin:20px 0 0;padding:20px;}
 
 
 @media screen and (min-width: 1200px){
