--- a/css/common.css
+++ b/css/common.css
@@ -1,6 +1,16 @@
 @charset "utf-8";
 @import url('https://fonts.googleapis.com/css?family=Noto+Sans');
 
+.loading{
+	background:rgba(255,255,255,.95);
+	z-index:1999;
+	position:fixed;
+	width:100%;
+	height:100vh;
+	top:0;
+}
+.cenmid{position:absolute;top: 50%;left: 50%;-webkit-transform: translate(-50%, -50%);transform: translate(-50%, -50%);transition:0.2s;-webkit-transition:0.2s;}
+
 .note{color:#d65579;}
 
 .gray-h-line{width:100%;height:1px;background:#ddd;}
@@ -73,8 +83,8 @@
 /*--------*/
 
 
-header{height:121px;background:#0d0d0e;}
-header .inner{width:1160px;margin:0 auto;height:95px;}
+header{height:100px;background:#0d0d0e;}
+header .inner{width:1160px;margin:0 auto;height:74px;}
 header .h-msg{background:#292924;height:26px;}
 header .h-msg .inner{width:1160px;margin:0 auto;height:26px;padding-left:20px;padding-right:20px;}
 header .h-msg .inner .h-msg-l{color:#fff;height:26px;line-height:26px;float:left;}
@@ -88,12 +98,12 @@ header .h-msg .inner .h-msg-r .currency-sel .drop a:hover,header .h-msg .inner .
 header .h-msg .inner .h-msg-r .lan-sel{float:left;color:#fff;font-size:12px;line-height:26px;}
 header .h-msg .inner .h-msg-r .lan-sel a{color:#666;transition:0.2s;}
 header .h-msg .inner .h-msg-r .lan-sel a:hover,header .h-msg .inner .h-msg-r .lan-sel a.active{color:#fff;}
-header .fixarea{height:121px;width:100%;top:-57px;background:#0d0d0e;}
+header .fixarea{height:100px;width:100%;top:-57px;background:#0d0d0e;}
 .headerfix{position:fixed !important;top:0 !important;z-index:999;transition:0.35s ease-out;-webkit-transition:0.35s ease-out;background:rgba(255,255,255,.8);}
 header .logo{float:left;display:block;}
-header .logo img{height:54px;padding:20px 0;}
-header .menu-container{float:right;height:95px;}
-header .login-signup-container{float:right;height:95px;}
+header .logo img{height:44px;padding:15px 0;}
+header .menu-container{float:right;height:74px;}
+header .login-signup-container{float:right;height:74px;}
 
 body{
 	font-size:12px;
@@ -105,17 +115,17 @@ body{
 
 .rwd-width-limited{width:1160px;padding-left:20px;padding-right:20px;margin:0 auto;z-index:1;position:relative;}
 
-.one-ipc{float:left;height:calc( 100vw * 0.3333 * 0.5625 );position:relative;}
-.one-ipc.grid-3-1{width:33.333%;margin:0;}
+.one-ipc{float:left;height:calc( 100vw * 0.3333 * 0.38 );position:relative;}
+.one-ipc.grid-3-1{width:calc(33.333% - 20px);margin:10px 10px;}
 .one-ipc .pic{height:100%;position:relative;}
-.one-ipc .pic .cover{background:rgba(0,0,0,0.35);position:absolute;width:100%;height:100%;z-index: 1;transition:0.3s;}
-.one-ipc .info{font-size:18px;line-height:20px;padding:46px 0;width:150px;display:block;text-align:center;color:#fff;font-weight: bold;z-index:2;}
-.one-ipc .info.color-1{background:rgba(57,119,245,0.8);transition:0.3s;}
-.one-ipc .info.color-2{background:rgba(23,180,71,0.8);transition:0.3s;}
-.one-ipc .info.color-3{background:rgba(117,157,40,0.8);transition:0.3s;}
-.one-ipc .info.color-4{background:rgba(43,28,191,0.8);transition:0.3s;}
-.one-ipc .info.color-5{background:rgba(59,29,96,0.8);transition:0.3s;}
-.one-ipc .info.color-6{background:rgba(39,39,42,0.8);transition:0.3s;}
+.one-ipc .pic .cover{background:rgba(0,0,0,0.4);position:absolute;width:100%;height:100%;z-index: 1;transition:0.3s;}
+.one-ipc .info{font-size:18px;line-height:20px;padding:20px 0;width:120px;display:block;text-align:center;color:#fff;font-weight: bold;z-index:2;}
+.one-ipc .info.color-1{background:rgba(57,119,245,0.95);transition:0.3s;}
+.one-ipc .info.color-2{background:rgba(23,180,71,0.95);transition:0.3s;}
+.one-ipc .info.color-3{background:rgba(117,157,40,0.95);transition:0.3s;}
+.one-ipc .info.color-4{background:rgba(43,28,191,0.95);transition:0.3s;}
+.one-ipc .info.color-5{background:rgba(59,29,96,0.95);transition:0.3s;}
+.one-ipc .info.color-6{background:rgba(39,39,42,0.95);transition:0.3s;}
 .one-ipc:hover .pic .cover{opacity:0;}
 .one-ipc:hover .info.color-1{background:rgba(57,119,245,1);}
 .one-ipc:hover .info.color-2{background:rgba(23,180,71,1);}
@@ -148,6 +158,7 @@ footer .mailto{float:right;}
 
 .visual-link{width:100%;height:100%;display:block;position:relative;}
 
+
 /* ––––––––––––––––––––––––––––––––––––––––––––––––––
 Mobile style's
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
@@ -157,17 +168,17 @@ Mobile style's
 		overflow: initial;
 	}
 	header .menu-container{margin-right:50px;}
-	header .logo{height:95px;}
+	header .logo{height:74px;}
 }
 
 @media screen and (min-width: 768px) and (max-width: 1199px) {
 	header .h-msg .inner{width:calc(100% - 40px);padding-left:20px;padding-right:20px;margin:0 auto;}
 	header .login-signup-container{position:absolute;right:100px;}
-	header .logo{margin-left:20px;height:95px;}
+	header .logo{margin-left:20px;height:74px;}
 	.rwd-width-limited{width:calc(100% - 40px);padding-left:20px;padding-right:20px;margin:0 auto;}
 	
-	.one-ipc.grid-3-1{width:50%;}
-	.one-ipc{float:left;height:calc( 100vw * 0.5 * 0.5625 );position:relative;}
+	.one-ipc.grid-3-1{width:calc(33.333% - 20px);}
+	.one-ipc{float:left;height:calc( 100vw * 0.5 * 0.3 );position:relative;}
 	
 	.grid-4-1{width:calc(50% - 40px);margin:0 20px;}
 	.grid-3-1{width:calc(50% - 40px);margin:0 20px;}
@@ -175,7 +186,6 @@ Mobile style's
 	.sidebar-con .grid-4-1{width:160px;margin:0 20px;}
 	.sidebar-con .grid-4-3{width:calc(100% - 240px);margin:0 20px;}
 	.grid-800px{width:660px;margin:0 auto;}
-	
 }
 
 @media screen and (max-width: 767px) {
@@ -215,8 +225,13 @@ Mobile style's
 	
 	.rwd-width-limited{width:calc(100% - 20px);padding-left:10px;padding-right:10px;margin:0 auto;}
 	
-	.one-ipc.grid-3-1{width:100%;}
-	.one-ipc{float:none;height:calc( 100vw * 0.5625 );position:relative;display:block;}
+	.one-ipc.grid-3-1{width:calc(50% - 10px);margin:5px;}
+	.one-ipc{height:calc( 100vw * 0.3 );position:relative;display:block;}
+	.one-ipc .info{
+		font-size:14px;
+		padding: 16px 0;
+    	width: 80px;
+	}
 	
 	.grid-4-3,.grid-4-1{width:calc(50% - 16px);margin:0 8px;}
 	.sidebar-con .grid-4-3,.sidebar-con .grid-4-1{width:calc(100% - 16px);margin:0 8px;}
