--- a/css/pages.css
+++ b/css/pages.css
@@ -125,7 +125,7 @@
 }
 .pages-visual{width:100%;height:360px;overflow:hidden;}
 .product-classify-tab{}
-.product-classify-tab a{display:block;float:left;width:calc(16.666% - 20px);margin-right:20px;border:2px solid #999;color:#999;font-size:18px;text-align:center;height:66px;line-height:66px;box-sizing: border-box;transition:0.25s;font-weight: bold;}
+.product-classify-tab a{display:block;float:left;width:calc(16.666% - 20px);margin-right:20px;border:2px solid #999;color:#999;font-size:18px;text-align:center;height:54px;line-height:54px;box-sizing: border-box;transition:0.25s;font-weight: bold;}
 .product-classify-tab a.type-1{border-color:#d7e4fd;color:#3977f5;}
 .product-classify-tab a.type-1.active,.product-classify-tab a.type-1:hover{border-color:#3977f5;background:#3977f5;color:#fff;}
 .product-classify-tab a.type-2{border-color:#d1f0da;color:#17b447;}
@@ -301,6 +301,13 @@
 
 .one-rt-common .reply{background:#f5f5f5;margin:20px 0 0;padding:20px;}
 
+.flexslider.f_index{
+	margin-bottom:10px;
+}
+
+.index-pnav{
+	padding:0 10px;
+}
 
 @media screen and (min-width: 1200px){
 	.tab-con .tab-inner{display:none;max-height:325px;overflow-x: hidden;overflow-y: scroll;}
@@ -353,6 +360,9 @@
 	
 	.index-recommend-item.flex-4{flex:0 1 calc(50% - 40px);width:calc(50% - 40px);}
 	
+	.index-pnav{
+		padding:0 10px;
+	}
 }
 
 @media screen and (max-width: 767px) {
